2015.11.04 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrspec.h, mqrspec.h:
	  - Typo fix. (Thanks to @qianchenglenger)
	* qrenc.c:
	  - Merged pull-request #74. (Thanks to @mgorny)
	  - Added support for UTF8i and ANSIUTF8i formats that provide reverse
	    mappings of UTF8 and ANSIUTF8 formats respective. This is useful for
		black-on-white media.

2015.05.13 Kentaro Fukuchi <kentaro@fukuchi.org>
	* mqrspec.c:
	  - Typo fix.
	* README, README.md:
	  - Text format improved.
	* NEWS:
	  - Slightly updated.

2015.05.06 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c:
	  - New option "--svg-path" has been added, that uses a single path
	    instead of multiple rectangles to draw the modules.
		(cherry-picked from #41) (Thanks to @Oblomov)
	* tests/test_qrenc.sh, tests/test_images/.gitignore:
	  - Added an unfinished test script for qrencode has been added.

2015.05.05 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrencode.1.in, qrenc.c:
	  - Usage improved. (closes #62) (Thanks to @minus7)
	  - Typo fix. (Thanks to Ian Sweet (@Isweet))
	* README, README.md:
	  - The list of contributors updated: '@' prefix added for github
	    usernames.
	* qrenc.c:
	  - X Pixmap (XPM) support has been added. (closes #52)
	    (Thanks to @tklauser)
	* qrspec.h, mqrspec.h, qrencode.h:
	  - empty descriptions of some @params are filled.
	* rsecc.[ch], README:
	  - Short note about the credit has been improved.
	* Some code cleanups.

2015.05.04 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c:
	  - Merge pull request #63 from tklauser/qrenc-array-overflow-fix
	  - qrenc: Fix array overrun in color_set (Thanks to @tklauser and
	    @win32asm)
	* split.c:
	  - Merge pull request #67 from siggi-heltau/patch-1
	  - The variable name "new" has been renamed to "newstring" because "new"
	    is a reserved word in C++. (Thanks to @siggi-heltau)
	* qrenc.c:
	  - Added -r option to read input data from a file in addition to STDIN
	    and the command line. (cherry-picked from #68)